tests/m1/negative/private_function_import.ax
module private_function_import;

import m1lib.visibility;

fn main() -> i32 {
    return add_secret(1);
}
